WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12619
Non-abbreviated XPaths don't work
https://bugs.webkit.org/show_bug.cgi?id=12619
Summary
Non-abbreviated XPaths don't work
Alexey Proskuryakov
Reported
2007-02-05 13:05:15 PST
It seems to be an issue in the parser that garbage is sent to XPath::Step ctor instead of correct Axis ids.
Attachments
test case
(627 bytes, text/html)
2007-02-05 13:06 PST
,
Alexey Proskuryakov
no flags
Details
proposed fix
(3.89 KB, patch)
2007-02-05 21:48 PST
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-02-05 13:06:07 PST
Created
attachment 12941
[details]
test case
Alexey Proskuryakov
Comment 2
2007-02-05 13:40:00 PST
I have a fix for this issue (which is caused by a missing break in a switch statement in Parser::lex()), but my test case still doesn't work correctly. WebKit and Firefox/Opera seem to have different ideas about what a root node is (in Firefox, it's the document element, while in WebKit, it's the Document itself). Going to investigate this further.
Alexey Proskuryakov
Comment 3
2007-02-05 21:48:39 PST
Created
attachment 12960
[details]
proposed fix
Geoffrey Garen
Comment 4
2007-02-05 21:50:57 PST
Comment on
attachment 12960
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2007-02-05 21:53:19 PST
Committed revision 19425.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug