        Reviewed by Geoff.

http://bugs.webkit.org/show_bug.cgi?id=12619
        Non-abbreviated XPaths don't work

        Test: fast/xpath/ancestor-axis.html

        * xml/XPathParser.cpp:
        (WebCore::XPath::Parser::lex): Fix axis name parsing to actually work.
        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::nodeTestMatches): Fix "*" node test to actually work.



Canonical link: https://commits.webkit.org/16333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19425 268f45cc-cd09-0410-ab3c-d52691b4dbfc